 * Fix check for -Xlog in cassandra-env.sh (CASSANDRA-16279)
 * SSLFactory should initialize SSLContext before setting protocols (CASSANDRA-16362)
 * Restore sasi dependencies jflex, snowball-stemmer, and concurrent-trees, in the cassandra-all pom (CASSANDRA-16303)
 * Fix DecimalDeserializer#toString OOM (CASSANDRA-14925)
Merged from 3.11:
 * Fix digest computation for queries with fetched but non queried columns (CASSANDRA-15962)
 * Reduce amount of allocations during batch statement execution (CASSANDRA-16201)
 * Update jflex-1.6.0.jar to match upstream (CASSANDRA-16393)
Merged from 3.0:
 * Prevent unbounded number of pending flushing tasks (CASSANDRA-16261)
 * Improve empty hint file handling during startup (CASSANDRA-16162)
 * Fix skipping on pre-3.0 created compact storage sstables due to missing primary key liveness (CASSANDRA-16226)
 * Allow empty string in collections with COPY FROM in cqlsh (CASSANDRA-16372

4.0-beta4
 * DROP COMPACT STORAGE should invalidate prepared statements still using CompactTableMetadata (CASSANDRA-16361)
 * Update default num_tokens to 16 and allocate_tokens_for_local_replication_factor to 3 (CASSANDRA-13701)
 * Remove use of String.intern() (CASSANDRA-15810)
 * Fix the missing bb position in ByteBufferAccessor.getUnsignedShort (CASSANDRA-16249)
 * Make sure OOM errors are rethrown on truncation failure (CASSANDRA-16254)
 * Send back client warnings when creating too many tables/keyspaces (CASSANDRA-16309)
 * Add dedicated tcp user timeout for streaming connection (CASSANDRA-16143)
 * Add generatetokens script for offline token allocation strategy generation (CASSANDRA-16205)
 * Remove Windows scripts (CASSANDRA-16171)
 * Improve checksumming and compression in protocol V5 (CASSANDRA-15299)
 * Optimised repair streaming improvements (CASSANDRA-16274)
 * Update jctools dependency to 3.1.0 (CASSANDRA-16255)
 * 'SSLEngine closed already' exception on failed outbound connection (CASSANDRA-16277)