@@ -18,6 +18,8 @@
 
 package org.apache.cassandra.tools.nodetool;
 
+import java.util.Arrays;
+
 import org.junit.BeforeClass;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -28,10 +30,13 @@ import org.apache.cassandra.locator.SimpleSnitch;
 import org.apache.cassandra.service.StorageService;
 import org.apache.cassandra.tools.ToolRunner;
 import org.apache.cassandra.utils.FBUtilities;
+import org.assertj.core.api.Assertions;
 
 import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.Matchers.matchesPattern;
+import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThat;
+import static org.junit.Assert.assertTrue;
 
 @RunWith(OrderedJUnit4ClassRunner.class)
 public class RingTest extends CQLTester
@@ -52,15 +57,22 @@ public class RingTest extends CQLTester
     @Test
     public void testRingOutput()
     {
-        HostStatWithPort host = new HostStatWithPort(null, FBUtilities.getBroadcastAddressAndPort(), false, null);
+        final HostStatWithPort host = new HostStatWithPort(null, FBUtilities.getBroadcastAddressAndPort(),
+                                                           false, null);
         validateRingOutput(host.ipOrDns(false),
                             "ring");
-        validateRingOutput(host.ipOrDns(true),
-                            "-pp", "ring");
-        host = new HostStatWithPort(null, FBUtilities.getBroadcastAddressAndPort(), true, null);
-        validateRingOutput(host.ipOrDns(false),
-                            "ring", "-r");
-        validateRingOutput(host.ipOrDns(true),
+        Arrays.asList("-pp", "--print-port").forEach(arg -> {
+            validateRingOutput(host.ipOrDns(true),
+                               "-pp", "ring");
+        });
+
+        final HostStatWithPort hostResolved = new HostStatWithPort(null, FBUtilities.getBroadcastAddressAndPort(),
+                                                                   true, null);
+        Arrays.asList("-r", "--resolve-ip").forEach(arg -> {
+            validateRingOutput(hostResolved.ipOrDns(false),
+                               "ring", "-r");
+        });
+        validateRingOutput(hostResolved.ipOrDns(true),
                             "-pp", "ring", "-r");
     }
 
@@ -68,7 +80,7 @@ public class RingTest extends CQLTester
     {
         ToolRunner.ToolResult nodetool = ToolRunner.invokeNodetool(args);
         nodetool.assertOnCleanExit();
-        /**
+        /*
 
          Datacenter: datacenter1
          ==========
@@ -79,6 +91,7 @@ public class RingTest extends CQLTester
          */
         String[] lines = nodetool.getStdout().split("\\R");
         assertThat(lines[1].trim(), endsWith(SimpleSnitch.DATA_CENTER_NAME));
+        assertThat(lines[3], matchesPattern("Address *Rack *Status *State *Load *Owns *Token *"));
         String hostRing = lines[lines.length-4].trim(); // this command has a couple extra newlines and an empty error message at the end. Not messing with it.
         assertThat(hostRing, startsWith(hostForm));
         assertThat(hostRing, containsString(SimpleSnitch.RACK_NAME));
@@ -88,5 +101,81 @@ public class RingTest extends CQLTester
         assertThat(hostRing, matchesPattern(".*\\d+\\.\\d+%.*"));
         assertThat(hostRing, endsWith(token));
         assertThat(hostRing, not(containsString("?")));
+    }
+
+    @Test
+    public void testWrongArgFailsAndPrintsHelp()
+    {
+        ToolRunner.ToolResult tool = ToolRunner.invokeNodetool("--wrongarg", "ring");
+        Assertions.assertThat(tool.getStdout()).containsIgnoringCase("nodetool help");
+        assertEquals(1, tool.getExitCode());
+        assertTrue(tool.getCleanedStderr().isEmpty());
+    }
+
+    @Test
+    public void testMaybeChangeDocs()
+    {
+        // If you added, modified options or help, please update docs if necessary
+
+        ToolRunner.ToolResult tool = ToolRunner.invokeNodetool("help", "ring");
+
+        String help = "NAME\n" + "        nodetool ring - Print information about the token ring\n"
+                      + "\n"
+                      + "SYNOPSIS\n"
+                      + "        nodetool [(-h <host> | --host <host>)] [(-p <port> | --port <port>)]\n"
+                      + "                [(-pp | --print-port)] [(-pw <password> | --password <password>)]\n"
+                      + "                [(-pwf <passwordFilePath> | --password-file <passwordFilePath>)]\n"
+                      + "                [(-u <username> | --username <username>)] ring [(-r | --resolve-ip)]\n"
+                      + "                [--] [<keyspace>]\n"
+                      + "\n"
+                      + "OPTIONS\n"
+                      + "        -h <host>, --host <host>\n"
+                      + "            Node hostname or ip address\n"
+                      + "\n"
+                      + "        -p <port>, --port <port>\n"
+                      + "            Remote jmx agent port number\n"
+                      + "\n"
+                      + "        -pp, --print-port\n"
+                      + "            Operate in 4.0 mode with hosts disambiguated by port number\n"
+                      + "\n"
+                      + "        -pw <password>, --password <password>\n"
+                      + "            Remote jmx agent password\n"
+                      + "\n"
+                      + "        -pwf <passwordFilePath>, --password-file <passwordFilePath>\n"
+                      + "            Path to the JMX password file\n"
+                      + "\n"
+                      + "        -r, --resolve-ip\n"
+                      + "            Show node domain names instead of IPs\n"
+                      + "\n"
+                      + "        -u <username>, --username <username>\n"
+                      + "            Remote jmx agent username\n"
+                      + "\n"
+                      + "        --\n"
+                      + "            This option can be used to separate command-line options from the\n"
+                      + "            list of argument, (useful when arguments might be mistaken for\n"
+                      + "            command-line options\n"
+                      + "\n"
+                      + "        <keyspace>\n"
+                      + "            Specify a keyspace for accurate ownership information (topology\n"
+                      + "            awareness)\n"
+                      + "\n"
+                      + "\n";
+        Assertions.assertThat(tool.getStdout()).isEqualTo(help);
+    }
+
+    @Test
+    public void testRingKeyspace()
+    {
+        // Bad KS
+        ToolRunner.ToolResult tool = ToolRunner.invokeNodetool("ring", "mockks");
+        Assertions.assertThat(tool.getStdout()).contains("The keyspace mockks, does not exist");
+        assertEquals(0, tool.getExitCode());
+        assertTrue(tool.getCleanedStderr().isEmpty());
+
+        // Good KS
+        tool = ToolRunner.invokeNodetool("ring", "system_schema");
+        Assertions.assertThat(tool.getStdout()).contains("Datacenter: datacenter1");
+        assertEquals(0, tool.getExitCode());
+        assertTrue(tool.getCleanedStderr().isEmpty());
     }
 }
